# textclassnb

./: README.md  pyproject.toml  textclassnb.py
